JG-2004-02-14-2: Bugfix:    Fixed broken build on lx24-amd64.

SG-2004-02-14-1: Bugfix:    the event master ignored the flush settings. Every
                            flush was handled as flush = 0 seconds.
                 Changed:   qmaster   
                 Review:    pending

JG-2004-02-14-1: Bugfix:    Make spoolinit (creation of the spooling database) 
                            fail, if the database already exists.
                 Review:    pending

JG-2004-02-14-0: Testsuite: Checked and/or fixed following testsuite tests:
                            bugs/issuezilla/226 bugs/issuezilla/314 
                            bugs/issuezilla/402 bugs/issuezilla/403 
                            bugs/issuezilla/423 bugs/issuezilla/440 
                            bugs/issuezilla/478 bugs/issuezilla/509 
                            bugs/issuezilla/511 bugs/issuezilla/524 
                            bugs/issuezilla/527 bugs/issuezilla/540 
                            bugs/issuezilla/445 api/drmaa

SG_2004-02-14-0: Bugfix:    fixed the build for linux

DT-2004-02-13-0: Enhancem:  qconf now uses flatfile spooling instead of classic
                            spooling.  Might be broken for EH and PE because of
                            the new RUE type.  Not yet fully cleaned and
                            commented.
                 Bugfix:    Fixed a variety of classic spooling, qconf, and
                            other bugs.
                 Changed:   Flatfile spooling, classic spooling, qconf, sgeobj
                 Review:    Pending

CR-2004-02-13-1: Testsuite: throughput test: don't send job start command
                            to a remote shell when a former job start is
                            not yet executed.

CR-2004-02-13-0: Testsuite: fixed bug when setting up user portlist in
                            user configuration

SG-2004-02-13-0: Cleanup:   first part of removing sge from sgeee
                 Changed:   all