@@ -1,3 +1,9 @@
+SG-2004-02-15-0: Bugfix:    the event thread works with a fixed interval to
+                            deliver events (every second)
+                 Changed:   qmaster
+                 Review:    pending
+                 Issue:     688
+
 JG-2004-02-14-2: Bugfix:    Fixed broken build on lx24-amd64.
 
 SG-2004-02-14-1: Bugfix:    the event master ignored the flush settings. Every
